# assetmodel

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
assetmodel/: __init__.py  autnum_record.py  autonomous_system.py  domain_record.py  fingerprint.py  fqdn.py  ip_address.py  netblock.py  network_endpoint.py  organization.py  service.py  socket_address.py  source.py  tls_certificate.py
assetmodel/domain/: fqdn.py
assetmodel/network/: ipv4_address.py  ipv4_netblock.py  ipv6_address.py  ipv6_netblock.py
assetmodel/registration/: autnum_record.py  domain_record.py
assetmodel/type/: __init__.py  ip_address_type.py  netblock_type.py
tests/domain/: test_fqdn.py
tests/network/: test_ip_address.py
tests/registration/: test_autnum_record.py  test_domain_record.py
